tests/tests_p1/pass/prof/02ok.min
module
	forward number var
end
