tests/tests_p1/fail/prof/01init.min
module
	const number var;
end
constants must be initialized!
